# VectorGraphicsEditor

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  skills-lock.json
.github/workflows/: cmake-multi-platform.yml  manual-release.yml  release.yml
SVG_Editor/: AppLanguage.cpp  AppLanguage.h  CMakeLists.txt  CanvasGeometry.cpp  CanvasGeometry.h  CanvasView.cpp  CanvasView.h  CanvasViewConstants.h  CanvasViewCore.cpp  CanvasViewInput.cpp  CanvasViewSelection.cpp  CreationStrategy.h  DragCreationStrategy.cpp  DragCreationStrategy.h  FileManager.cpp  FileManager.h  I18n.cpp  I18n.h  MainWindow.cpp  MainWindow.h  MainWindowActions.cpp  MainWindowActions.h  MultiShapeSession.cpp  MultiShapeSession.h  PathCreationStrategy.cpp  PathCreationStrategy.h  PropertyPanel.cpp  PropertyPanel.h  PropertyPanelGeometryFields.h  SelectionFrame.cpp  SelectionFrame.h  SelectionTransformOverlayItem.cpp  SelectionTransformOverlayItem.h  ShapeData.cpp  ShapeData.h  ShapeFactory.cpp  ShapeFactory.h  ShapeItem.cpp  ShapeItem.h  ThemeUtils.cpp  (+5 more)
SVG_Editor/canvas/: CanvasViewCore.cpp
SVG_Editor/ui/: MainWindow.cpp
VectorGraphicsEditor/canvas/: CanvasViewCore.cpp  CanvasViewInput.cpp  CreationStrategy.h  DragCreationStrategy.cpp  DragCreationStrategy.h  MultiShapeSession.cpp  MultiShapeSession.h  PathCreationStrategy.cpp  PathCreationStrategy.h
VectorGraphicsEditor/graphics/: ShapeItem.cpp
VectorGraphicsEditor/ui/: MainWindow.cpp  MainWindow.h  PropertyPanel.cpp  ThemeUtils.cpp  TutorialManualContent.h
docs/: architecture.md  build-and-run.md  canvas-layer.md  core-layer.md  dev-workflow.md  extending.md  file-format.md  graphics-layer.md  i18n-and-theme.md  testing.md  troubleshooting.md  ui-layer.md
packaging/windows/: installer.nsi
presentation/: package.json  pnpm-lock.yaml  slides.md
presentation/sections/: 01-cover.md  02-outline.md  03-overview.md  04-architecture.md  05-shapedata.md  06-inheritance.md  07-strategy.md  08-di.md  09-events.md  10-painting.md  11-fileio.md  12-selection.md  13-i18n.md  14-testing.md  15-build.md  16-decisions.md  17-stats.md  18-demo.md  19-future.md  20-end.md
presentation/styles/: index.css
tests/: CMakeLists.txt  CanvasGeometryTests.cpp  FileManagerTests.cpp  ShapeDataTests.cpp  ShapeItemTests.cpp
tests/graphics/: ShapeItemTests.cpp
tests/ui/: MainWindowTests.cpp
